--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation group: 'com.github.gwenn', name: 'sqlite-dialect', version: '0.1.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    implementation 'org.hibernate:hibernate-core:5.6.4.Final'
 
 }
 
