--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     implementation 'org.hibernate:hibernate-core:5.6.4.Final'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.2'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.18.0'
+    implementation 'org.apache.poi:poi-ooxml:5.2.3'
 
 }
 
